--- a/vault.html
+++ b/vault.html
@@ -356,15 +356,36 @@
     }
 
     async function fetchY2KBalance(wallet) {
-  try {
-    const response = await fetch(`https://y2k-api.example.com/balance/${wallet}`);
-    const data = await response.json();
+  const contractAddress = "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d";
+  const cronosRpc = "https://evm.cronos.org";
+  const balanceOfSelector = "0x70a08231"; // ERC20 balanceOf(address)
 
-    if (!data || !data.balanceFormatted) {
-  document.getElementById("balance").textContent = `0 Y2K`;
-} else {
-  document.getElementById("balance").textContent = `${data.balanceFormatted} Y2K`;
-}
+  const addressParam = wallet.replace("0x", "").padStart(64, "0");
+  const callData = balanceOfSelector + addressParam;
+
+  try {
+    const response = await fetch(cronosRpc, {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({
+        jsonrpc: "2.0",
+        id: 1,
+        method: "eth_call",
+        params: [
+          {
+            to: contractAddress,
+            data: callData,
+          },
+          "latest",
+        ],
+      }),
+    });
+
+    const result = await response.json();
+    const rawHex = result.result;
+    const balance = parseInt(rawHex, 16) / 1e18;
+
+    document.getElementById("balance").textContent = `${balance.toFixed(2)} Y2K`;
   } catch (err) {
     console.warn("Failed to fetch Y2K balance", err);
     document.getElementById("balance").textContent = `0 Y2K`;
