--- a/vault.html
+++ b/vault.html
@@ -120,10 +120,62 @@
     .wallet-hud span {
       color: #00ffe1;
       font-size: 14px;
-      word-break: break-all;
+      word-break: break-word;
     }
 
-        .glass-panel {
+    .wallet-hud span:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .modal-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      backdrop-filter: blur(6px);
+      display: none;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .modal-content {
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 14px;
+      padding: 24px;
+      max-width: 90%;
+      width: 360px;
+      color: #fff;
+      box-shadow: 0 0 20px rgba(0,255,225,0.2);
+      text-align: center;
+    }
+
+    .modal-content h2 {
+      margin-bottom: 12px;
+      color: #00ffe1;
+      font-size: 18px;
+    }
+
+    .modal-content p {
+      font-size: 14px;
+      margin: 4px 0;
+      color: #ccc;
+    }
+
+    .close-btn {
+      margin-top: 16px;
+      background: #111;
+      color: #00ffe1;
+      border: 1px solid #00ffe140;
+      padding: 8px 16px;
+      border-radius: 8px;
+      font-size: 13px;
+      cursor: pointer;
+    }
+
+    .glass-panel {
       background: rgba(255,255,255,0.03);
       border-radius: 20px;
       border: 1px solid rgba(255,255,255,0.08);
@@ -132,7 +184,7 @@
       margin-top: 16px;
     }
 
-    .game-title {
+        .game-title {
       font-size: 20px;
       color: #fff;
       margin-bottom: 8px;
@@ -193,21 +245,20 @@
     }
 
     .placeholder-grid {
-  margin-top: 24px;
-  height: 180px;
-  border-radius: 12px;
-  background: repeating-linear-gradient(
-    45deg, rgba(255,255,255,0.03), rgba(255,255,255,0.03) 10px,
-    rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
-  );
-  border: 1px dashed rgba(255,255,255,0.1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgba(255,255,255,0.3);
-  font-size: 14px;
-}
-    
+      margin-top: 24px;
+      height: 180px;
+      border-radius: 12px;
+      background: repeating-linear-gradient(
+        45deg, rgba(255,255,255,0.03), rgba(255,255,255,0.03) 10px,
+        rgba(255,255,255,0.05) 10px, rgba(255,255,255,0.05) 20px
+      );
+      border: 1px dashed rgba(255,255,255,0.1);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: rgba(255,255,255,0.3);
+      font-size: 14px;
+    }
   </style>
 </head>
 <body>
@@ -226,7 +277,7 @@
   </div>
 
   <div class="wallet-hud">
-    <span id="wallet">0x...</span>
+    <span id="wallet" onclick="openProfileModal()">0x...</span>
     <span id="balance">0 Y2K</span>
     <input id="nicknameInput" type="text" placeholder="Enter 𝕏 or nickname" style="flex:1; background:#111; border:1px solid #00ffe140; color:#00ffe1; padding:4px 8px; border-radius:8px; font-size:12px;" />
     <button id="connectWalletBtn" class="nav-btn" style="margin-top:12px;">Connect Wallet</button>
@@ -243,11 +294,26 @@
     </select>
     <button class="buy-btn">Buy a Square</button>
   </div>
+
   <div class="placeholder-grid">[ Square Grid Coming Soon ]</div>
 </div>
 
+<!-- Profile Modal -->
+<div id="profileModal" class="modal-overlay">
+  <div class="modal-content">
+    <h2>Player Profile</h2>
+    <p id="profileName">@nickname</p>
+    <p id="profileWallet">Wallet: 0x1234...abcd</p>
+    <p>Games Played: 1</p>
+    <p>Squares Bought: 3</p>
+    <p>Y2K Earnings: 0</p>
+    <button class="close-btn" onclick="closeProfileModal()">Close</button>
+  </div>
+</div>
+
 <script type="module">
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
+
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
   import { getFirestore, doc, setDoc, getDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-firestore.js";
 
   const firebaseConfig = {
@@ -266,8 +332,9 @@
   const contractAddress = "0xB4Df7d2A736Cc391146bB0dF4277E8F68247Ac6d";
   const cronosRpc = "https://evm.cronos.org";
 
+  let currentWallet = "";
+
   async function fetchY2KBalance(wallet) {
-    const userDocRef = doc(db, "users", wallet.toLowerCase());
     const provider = new ethers.providers.JsonRpcProvider(cronosRpc);
     const abi = ["function balanceOf(address) view returns (uint256)"];
     const token = new ethers.Contract(contractAddress, abi, provider);
@@ -283,6 +350,8 @@
   async function connectWallet() {
     const accounts = await window.ethereum.request({ method: "eth_requestAccounts" });
     const wallet = accounts[0];
+    currentWallet = wallet.toLowerCase();
+
     const walletSpan = document.getElementById("wallet");
     const nicknameInput = document.getElementById("nicknameInput");
     const connectBtn = document.getElementById("connectWalletBtn");
@@ -291,38 +360,33 @@
     walletSpan.textContent = wallet.slice(0, 6) + "..." + wallet.slice(-4);
     fetchY2KBalance(wallet);
 
-    // Update button to "Disconnect"
     connectBtn.textContent = "Disconnect";
     connectBtn.onclick = () => location.reload();
 
-    // Load nickname from Firestore
-const userDocRef = doc(db, "users", wallet.toLowerCase());
-const snap = await getDoc(userDocRef);
-if (snap.exists()) {
-  nicknameInput.value = snap.data().nickname || "";
-}
-
-// Save nickname on blur
-nicknameInput.addEventListener("change", async () => {
-  const nickname = nicknameInput.value.trim();
-  if (nickname.length > 0) {
-    try {
-      await setDoc(userDocRef, { nickname }, { merge: true });
-      console.log("Saved nickname:", nickname);
-    } catch (err) {
-      console.error("Nickname save error:", err);
+    const userDocRef = doc(db, "users", currentWallet);
+    const snap = await getDoc(userDocRef);
+    if (snap.exists()) {
+      nicknameInput.value = snap.data().nickname || "";
     }
-  }
-});
 
-// Watch nickname changes
-onSnapshot(userDocRef, (docSnap) => {
-  if (docSnap.exists()) {
-    nicknameInput.value = docSnap.data().nickname || "";
-  }
-});
+    nicknameInput.addEventListener("change", async () => {
+      const nickname = nicknameInput.value.trim();
+      if (nickname.length > 0) {
+        try {
+          await setDoc(userDocRef, { nickname }, { merge: true });
+          console.log("Saved nickname:", nickname);
+        } catch (err) {
+          console.error("Nickname save error:", err);
+        }
+      }
+    });
 
-    // Admin-only status selector
+    onSnapshot(userDocRef, (docSnap) => {
+      if (docSnap.exists()) {
+        nicknameInput.value = docSnap.data().nickname || "";
+      }
+    });
+
     const selector = document.getElementById("statusSelector");
     if (wallet.toLowerCase() === ADMIN_WALLET.toLowerCase()) {
       selector.style.display = "block";
@@ -331,7 +395,6 @@ onSnapshot(userDocRef, (docSnap) => {
       });
     }
 
-    // Watch game status
     const badge = document.getElementById("statusBadge");
     function updateBadge(status) {
       badge.textContent = status.toUpperCase();
@@ -349,6 +412,27 @@ onSnapshot(userDocRef, (docSnap) => {
   window.addEventListener("DOMContentLoaded", () => {
     document.getElementById("connectWalletBtn").addEventListener("click", connectWallet);
   });
+
+  // Profile Modal Logic
+  window.openProfileModal = async function () {
+    const modal = document.getElementById("profileModal");
+    const profileName = document.getElementById("profileName");
+    const profileWallet = document.getElementById("profileWallet");
+
+    const shortWallet = currentWallet.slice(0, 6) + "..." + currentWallet.slice(-4);
+    profileWallet.textContent = "Wallet: " + shortWallet;
+
+    const docSnap = await getDoc(doc(db, "users", currentWallet));
+    profileName.textContent = docSnap.exists() && docSnap.data().nickname
+      ? "@" + docSnap.data().nickname
+      : "@unknown";
+
+    modal.classList.add("show");
+  };
+
+  window.closeProfileModal = function () {
+    document.getElementById("profileModal").classList.remove("show");
+  };
 </script>
 </body>
 </html>
